# bevy-jam-4

./: Cargo.toml  macos-build.sh  web-build.sh  win-build.sh
assets/: credits.txt
assets/models/: christmas-tree.glb  santa_claus-modified.glb
assets/models/houses/: house-large.glb  house-town.glb  house.glb
html/: index.html
src/: assets.rs  camera.rs  collisions.rs  constants.rs  environment.rs  generate_mesh.rs  input.rs  main.rs  sam_site.rs  santa.rs  snow.rs  snow_plugin.rs  ui.rs  villages.rs
src/bs/: main.rs
src/generator/: main.rs  mod.rs  terrain.rs  terrain_common.rs  terrain_rtin.rs  ui.rs
src/terrain/: main.rs
