[package]
name = "bevy-jam-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.12.1"
bevy_rand = "0.4.0"
bevy_xpbd_3d = { version = "0.3.2", default-features = false, features = ["3d", "f32", "debug-plugin", "collider-from-mesh", "async-collider", "simd", "parallel"] }
big-brain = { git="https://github.com/zkat/big-brain", branch="main" }
rand_chacha = "0.3.1"
flagset = "0.4.4"
bonsai-bt = "0.5.0"
serde = "1.0.193"
serde_json = "1.0.108"
pathfinding = "4.4.0"
itertools = "0.12.0"
belly = { git="https://github.com/jkb0o/belly/", branch="0.12" }
rand = "0.8.5"
time = { version = "0.3.30", features = [] }
bevy_voxel_world = "0.3.3"
bevy_vox_mesh = "0.8.0"
bevy_atmosphere = "0.8.1"
bevy_toon_shader = "0.3.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
